# redesigned-doodle

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  main.h
detector/: detector.cpp  detector.h
recognizor/: recognizor.cpp  recognizor.h
util/: performance.cpp  performance.h
